[package]
name = "syncr"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.md"
author = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
proptest = "1.0.0"
rand = "0.8.5"

[profile.release]
lto = "fat"
debug = false

[[bench]]
name = "files"
harness = false
