[package]
name = "syncr"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.md"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["md4"]
md4 = ["dep:md4"]

[dependencies]
bytes = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
itertools = "0.10.5"
md4 = { version = "0.10.2", optional = true }
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
proptest = "1.0.0"
rand = "0.8.5"

[profile.release]
lto = "fat"
debug = false

[[bench]]
name = "files"
harness = false
